flux/apps/media/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: default
spec:
  selector:
    matchLabels:
      app: kavita
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kavita
    spec:
      containers:
        - name: kavita
          image: lscr.io/linuxserver/kavita:0.9.1
          resources:
            requests:
              cpu: 59m
              memory: 339Mi
            limits:
              # memory: 339Mi
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: kavita-config
              mountPath: /config
            - name: media-books
              mountPath: /book
      volumes:
        - name: kavita-config
          nfs:
            server: datasphere
            path: /Root/Volumes/kavita
        - name: media-books
          nfs:
            server: datasphere
            path: /Root/Media/Books
