flux/apps/media/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: default
spec:
  selector:
    app: kavita
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
