flux/apps/media/kavita/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kavita-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`books.home`)
      kind: Rule
      services:
        - name: kavita
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kavita-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`books.arlodev.co.uk`)
      kind: Rule
      services:
        - name: kavita
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kavita-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`books.arlodev.co.uk`)
      kind: Rule
      services:
        - name: kavita
          port: 80
  tls:
    secretName: cert-kavita
